// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden examples > accumulator > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t3",
              "type": "virtual",
            },
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "accumulator",
    "wires": [
      [
        2,
        4,
        1,
        2,
      ],
      [
        1,
        4,
        2,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > adder > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t1",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t3",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t2",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "adder",
    "wires": [],
  },
}
`;

exports[`golden examples > clamp > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 100,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 100,
                "signal": {
                  "name": "__t10",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t10",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t10",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t10",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t11",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t1",
              "type": "virtual",
            },
          },
        },
        "entity_number": 4,
        "name": "arithmetic-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "clamp",
    "wires": [
      [
        1,
        4,
        2,
        2,
      ],
      [
        2,
        4,
        3,
        2,
      ],
      [
        2,
        4,
        3,
        2,
      ],
      [
        3,
        4,
        4,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > comparison-chain > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≠",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "comparison-chain",
    "wires": [
      [
        1,
        4,
        3,
        2,
      ],
      [
        2,
        4,
        3,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > conditional-counter > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t5",
              "type": "virtual",
            },
            "second_constant": 1,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "-",
            "output_signal": {
              "name": "__t7",
              "type": "virtual",
            },
            "second_constant": 1,
          },
        },
        "entity_number": 3,
        "name": "arithmetic-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "decider-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t5",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t7",
              "type": "virtual",
            },
          },
        },
        "entity_number": 5,
        "name": "arithmetic-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "conditional-counter",
    "wires": [
      [
        5,
        4,
        1,
        2,
      ],
      [
        1,
        4,
        2,
        2,
      ],
      [
        1,
        4,
        3,
        2,
      ],
      [
        2,
        4,
        4,
        2,
      ],
      [
        3,
        4,
        4,
        2,
      ],
      [
        4,
        4,
        5,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > counter > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "second_constant": 1,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "counter",
    "wires": [
      [
        2,
        4,
        1,
        2,
      ],
      [
        1,
        4,
        2,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > for_sum > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t4",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t16__d",
              "type": "virtual",
            },
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≤",
                "constant": 10,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t6",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t9",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 4,
        "name": "arithmetic-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≠",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "__t6",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t9",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 5,
        "name": "decider-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t9",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 6,
        "name": "decider-combinator",
        "position": {
          "x": 10,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t9",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t16__d",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 7,
        "name": "decider-combinator",
        "position": {
          "x": 12,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "__t3",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 8,
        "name": "constant-combinator",
        "position": {
          "x": 14,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "for_sum",
    "wires": [
      [
        5,
        4,
        6,
        2,
      ],
      [
        2,
        4,
        6,
        2,
      ],
      [
        6,
        4,
        1,
        2,
      ],
      [
        1,
        4,
        1,
        2,
      ],
      [
        5,
        4,
        7,
        2,
      ],
      [
        7,
        4,
        2,
        2,
      ],
      [
        2,
        4,
        2,
        2,
      ],
      [
        8,
        2,
        2,
        2,
      ],
      [
        2,
        4,
        3,
        2,
      ],
      [
        8,
        2,
        4,
        2,
      ],
      [
        5,
        4,
        4,
        2,
      ],
      [
        4,
        4,
        5,
        2,
      ],
      [
        3,
        4,
        5,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > mux > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "constant": 0,
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "decider-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "decider-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t7",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 3,
        "name": "arithmetic-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
            "else_outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "decider-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t7",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t3",
              "type": "virtual",
            },
          },
        },
        "entity_number": 5,
        "name": "arithmetic-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "mux",
    "wires": [
      [
        1,
        4,
        2,
        2,
      ],
      [
        2,
        4,
        3,
        2,
      ],
      [
        3,
        4,
        4,
        2,
      ],
      [
        3,
        4,
        4,
        2,
      ],
      [
        4,
        4,
        5,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > while_count > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t11__d",
              "type": "virtual",
            },
          },
        },
        "entity_number": 1,
        "name": "arithmetic-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t7",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t5",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t6",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
              {
                "comparator": "≠",
                "compare_type": "and",
                "constant": 0,
                "first_signal": {
                  "name": "__t6",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "decider-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t11__d",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 5,
        "name": "decider-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "__t4",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 6,
        "name": "constant-combinator",
        "position": {
          "x": 10,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "while_count",
    "wires": [
      [
        4,
        4,
        5,
        2,
      ],
      [
        5,
        4,
        1,
        2,
      ],
      [
        1,
        4,
        1,
        2,
      ],
      [
        6,
        2,
        2,
        2,
      ],
      [
        4,
        4,
        2,
        2,
      ],
      [
        1,
        4,
        3,
        2,
      ],
      [
        2,
        4,
        4,
        2,
      ],
      [
        3,
        4,
        4,
        2,
      ],
    ],
  },
}
`;
